Select RSS feeds to poll by class discriminator.