@@ -9,7 +9,6 @@ import dev.morphia.query.Query;
 import dev.morphia.query.Sort;
 import dev.morphia.query.experimental.filters.Filters;
 import org.apache.log4j.Logger;
-import org.jetbrains.annotations.NotNull;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 import uk.co.eelpieconsulting.feedlistener.UnknownSubscriptionException;
@@ -18,7 +17,6 @@ import uk.co.eelpieconsulting.feedlistener.model.RssSubscription;
 import uk.co.eelpieconsulting.feedlistener.model.Subscription;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class SubscriptionsDAO {
@@ -132,14 +130,8 @@ public class SubscriptionsDAO {
     }
 
     public List<RssSubscription> getAllRssSubscriptions() {
-        List<Subscription> allSubscriptions = getSubscriptions(SubscriptionsDAO.LAST_READ_ASCENDING, null);
-        return allSubscriptions.stream().
-                filter(subscription -> isRssSubscription(subscription)).
-                map(subscription -> (RssSubscription) subscription).collect(Collectors.toList());
-    }
-
-    private boolean isRssSubscription(Subscription subscription) {
-        return subscription.getId().contains("feed-");    // TODO implement better
+        Query<RssSubscription> allRssSubscriptions = dataStoreFactory.getDs().find(RssSubscription.class);
+        return allRssSubscriptions.iterator().toList();   // TODO optimise for last read ordering
     }
 
     private boolean subscriptionExists(Subscription subscription) {
